src/document.scss
a {
  text-decoration: none;
}
.doc-category-title {
  /* Form Controls: */
  font-family: SoletoTrial-Regular;
  font-size: 12px;
  color: #9f9f9f;
  letter-spacing: 0.2px;
  text-align: left;
  line-height: 16px;
}
.doc-title-1 {
  /* Checkbox: */
  font-family: Soleto;
  font-weight: 300;
  font-size: 48px;
  color: #000000;
  letter-spacing: 0;
  margin-bottom: 24px;
}
.doc-desc-1 {
  /* Checkboxes allow the: */
  font-family: Soleto;
  font-weight: 300;
  font-size: 20px;
  color: #696969;
  letter-spacing: 0;
  line-height: 30px;
}
.doc-divider {
  height: 1px;
  /* Divider: */
  background: #f1f1f1;
  margin: 48px 0px;
}
.doc-title-2 {
  /* Examples: */
  font-family: Soleto;
  font-weight: 300;
  font-size: 28px;
  color: #28292b;
  letter-spacing: 0;
  margin-bottom: 16px;
}
.doc-desc-2 {
  /* Use in forms to togg: */
  font-family: Soleto;
  font-weight: 300;
  font-size: 16px;
  color: #696969;
  letter-spacing: 0;
  line-height: 24px;
  margin-bottom: 24px;
}
.doc-desc-2-highlight {
  /* Rectangle: */
  background: #f3f3f3;
  // padding-right: 44px;
}
.doc-desc-2-highlight-text {
  color: #FF4E00
}
.doc-example-container {
  /* Rectangle 3: */
  background: #ffffff;
  // border: 1px solid #efefef;
  // height: 280px;
}
.doc-props-table {
  width: 100%;
  border-collapse: collapse;
  thead {
    background-color: #f8f8f8;
  }
  tbody {
    background-color: #ffffff;
  }
  tr {
    border: 1px solid #efefef;
  }
  th {
    /* Property: */
    font-family: SoletoTrial-Bold;
    font-size: 11px;
    color: #9f9f9f;
    letter-spacing: 1.65px;
    line-height: 15px;
    text-transform: uppercase;
    text-align: left;
    padding: 20px 24px;
  }
  td {
    /* disabled state of ch: */
    font-family: Soleto;
    font-weight: 300;
    font-size: 16px;
    color: #696969;
    padding: 18px 24px;
  }
}
.doc-list {
  li {
    margin-bottom: 24px;
  }
}
.doc-list-bold {
  // /* • Logical: Trees sho: */
  font-family: SoletoTrial-Bold;
  font-size: 16px;
  color: #696969;
  letter-spacing: 0;
  line-height: 24px;
}
.doc-spec {
  height: 280px;
  width: 800px;
}

//spec
.doc-spec {
  height: 280px;
  // width: 800px;
  width: 100%;
}
.datepicker-spec {
  height: 635px;
  width: 800px;
}
.expansionpanel-spec {
  height: 369px;
  width: 800px;
}

//css for guide line and usage

.docs-usage-w50 {
  display: inline-block;
  overflow: hidden;
  width: calc(50% - 5px - 12px);
  &:nth-child(2) {
    margin-left: 24px;
  }
}
.docs-usage-w100 {
  width: 100%;
}
.docs-usage-center {
  img {
    // max-height: 100%;
    max-width: 100%;
    width: auto;
    height: auto;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
    transform: scale(0.5);
  }
}
.docs-usage-spec {
  position: relative;
  width: 100%;
  background-color: #fafafa;
}
.docs-usage-do {
  position: relative;
  background-color: #fafafa;
  overflow: hidden;
  &::before {
    content: ' ';
    position: absolute;
    height: 100%;
    width: 5px;
    background-color: #4caf4f;
  }
}
.docs-usage-dont {
  position: relative;
  background-color: #fafafa;
  overflow: hidden;
  &::before {
    content: ' ';
    position: absolute;
    height: 100%;
    width: 5px;
    background-color: #ff3333;
  }
}
.docs-usage-warn {
  position: relative;
  background-color: #fafafa;
  overflow: hidden;
  &::before {
    content: ' ';
    position: absolute;
    height: 100%;
    width: 5px;
    background-color: #ffc02e;
  }
}
.checkbox-usage {
  width: 388px;
  height: 160px;
  &:nth-child(2) {
    margin-left: 24px;
  }
}
.datepicker-usage {
  width: 388px;
  height: 291px;
  &:nth-child(2) {
    margin-left: 24px;
  }
}
.expansionpanel-usage {
  width: 800px;
  height: 352px;
  &:nth-child(2) {
    margin-top: 24px;
  }
}
.guideline-pic-w100 {
  width: 800px;
  height: 160px;
}
.guideline-pic-w50 {
  width: 388px;
  height: 160px;
}
.docs-mt32 {
  margin-top: 32px;
}
.docs-mt24 {
  margin-top: 24px;
}
.docs-ml24 {
  margin-left: 24px;
}
.docs-mb24 {
  margin-bottom: 24px;
}
.docs-mt16 {
  margin-top: 16px;
}
.doc-bold-title {
  font-size: 16px;
  font-weight: bold;
  margin-bottom: 15px;
  color: #000000
}
.doc-code-sec {
  margin: 0 0 30px 0;
  background-color: #f8f8f8;
  border: 1px solid #efefef;
  padding: 16px 20px;
  min-height: 64px;
  line-height: 30px;
  box-sizing: border-box;
  font-size: 16px;
  font-weight: 300;
  font-family: Soleto;
}

